
* LUCENE-9663: Adding compression to terms dict from SortedSet/Sorted DocValues.
  (Jaison Bi via Bruno Roustant)

* LUCENE-9877: Reduce index size by increasing allowable exceptions in PForUtil from 3 to 7. (Greg Miller)

* LUCENE-9935: Enable bulk merge for stored fields with index sort. (Robert Muir, Adrien Grand, Nhat Nguyen)

Optimizations
---------------------

* LUCENE-9932: Performance improvement for BKD index building (neoremind)

* LUCENE-9827: Speed up merging of stored fields and term vectors for smaller segments.
  (Daniel Mitterdorfer, Dimitrios Liapis, Adrien Grand, Robert Muir)

Bug Fixes
---------------------

* LUCENE-9791: BytesRefHash.equals/find is now thread safe, fixing a
  Luwak/Monitor bug causing registered queries to sometimes fail to
  match. (Paweł Bugalski)

* LUCENE-9887: Fixed parameter use in RadixSelector.
  (liupanfeng via Adrien Grand)

* LUCENE-9958: Fixed performance regression for boolean queries that configure a
  minimum number of matching clauses. (Adrien Grand, Matt Weber)
  
* LUCENE-9953: LongValueFacetCounts should count each document at most once when determining
  the total count for a dimension. Prior to this fix, multi-value docs could contribute a > 1
  count to the dimension count. (Greg Miller)

* LUCEDNE-9967: Do not throw NullPointerException while trying to handle another exception in
  ReplicaNode.start (Steven Schlansker)

Other
---------------------

* LUCENE-9836: Removed the pure Maven build. It is no longer possible to build
  artifacts using Maven (this feature was no longer working correctly). Due to
  migration to Gradle for Lucene/Solr 9.0, the maintenance of the Maven build
  was no longer reasonable. POM files are generated for deployment to Maven
  Central only. Please use "ant generate-maven-artifacts" to produce and deploy
  artifacts to any repository.  (Uwe Schindler, Dawid Weiss)

* LUCENE-9836: Migrate Maven tasks to use "maven-resolver-ant-tasks"